packages/docs/versioned_docs/version-1.4.3/components/paneview.mdx
import { SimplePaneview } from '@site/src/components/simplePaneview';
import { CustomHeaderPaneview } from '@site/src/components/paneview/customHeader';
import { DragAndDropPaneview } from '@site/src/components/paneview/dragAndDrop';
import Link from '@docusaurus/Link';

# Paneview

A paneview is a collapsed collection of vertically stacked panels and panel headers.
The panel header will always remain visible however the panel will only be visible when the panel is expanded.

:::info

Paneview panels can be re-ordered by dragging and dropping the panel headers.

:::

---

# Introduction

<div
    style={{
        height: '400px',
        backgroundColor: 'rgb(30,30,30)',
        color: 'white',
        margin: '20px 0px',
    }}
>
    <SimplePaneview />
</div>

```tsx title="Simple Paneview example"
import {
    IPaneviewPanelProps,
    PaneviewReact,
    PaneviewReadyEvent,
} from 'dockview';

const components = {
    default: (props: IPaneviewPanelProps<{ title: string }>) => {
        return (
            <div
                style={{
                    padding: '10px',
                    height: '100%',
                    backgroundColor: 'rgb(60,60,60)',
                }}
            >
                {props.params.title}
            </div>
        );
    },
};

SimplePaneview = () => {
    const onReady = (event: PaneviewReadyEvent) => {
        event.api.addPanel({
            id: 'panel_1',
            component: 'default',
            params: {
                title: 'Panel 1',
            },
            title: 'Panel 1',
        });

        event.api.addPanel({
            id: 'panel_2',
            component: 'default',
            params: {
                title: 'Panel 2',
            },
            title: 'Panel 2',
        });

        event.api.addPanel({
            id: 'panel_3',
            component: 'default',
            params: {
                title: 'Panel 3',
            },
            title: 'Panel 3',
        });
    };

    return (
        <PaneviewReact
            components={components}
            headerComponents={headerComponents}
            onReady={onReady}
            className="dockview-theme-dark"
        />
    );
};
```

## PaneviewReact Component

You can create a Paneview through the use of the `ReactPaneview` component.

```tsx
import { ReactPaneview } from 'dockview';
```

| Property            | Type                                 | Optional | Default | Description                                                 |
| ------------------- | ------------------------------------ | -------- | ------- | ----------------------------------------------------------- |
| onReady             | (event: SplitviewReadyEvent) => void | No       |         |                                                             |
| components          | object                               | No       |         |                                                             |
| headerComponents    | object                               | Yes      |         |                                                             |
| className           | string                               | Yes      | ''      |                                                             |
| disableAutoResizing | boolean                              | Yes      | false   | <Link to="/docs/basics/#auto-resizing">Auto Resizing</Link> |
| disableDnd          | boolean                              | Yes      | false   |                                                             |
| onDidDrop           | Event                                | Yes      |         |                                                             |

## Paneview API

The Paneview API is exposed both at the `onReady` event and on each panel through `props.containerApi`.
Through this API you can control general features of the component and access all added panels.

```tsx title="Paneview API via Panel component"
const MyComponent = (props: IGridviewPanelProps<{ title: string }>) => {
    // props.containerApi...

    return <div>{`My first panel has the title: ${props.params.title}`}</div>;
};
```

```tsx title="Paneview API via the onReady callback"
const onReady = (event: GridviewReadyEvent) => {
    // event.api...
};
```

| Property            | Type                                                             | Description                                                                                             |
| ------------------- | ---------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------- |
| height              | `number`                                                         | Component pixel height                                                                                  |
| width               | `number`                                                         | Component pixel width                                                                                   |
| minimumSize         | `number`                                                         | The sum of the `minimumSize` property for each panel                                                    |
| maximumSize         | `number`                                                         | The sum of the `maximumSize` property for each panel                                                    |
| length              | `number`                                                         | Number of panels                                                                                        |
| panels              | `IPaneviewPanel[]`                                               | All panels                                                                                              |
|                     |                                                                  |                                                                                                         |
| onDidLayoutChange   | `Event<void>`                                                    | Fires on layout change                                                                                  |
| onDidLayoutFromJSON | `Event<void>`                                                    | Fires of layout change caused by a fromJSON deserialization call                                        |
| onDidAddView        | `Event<IPaneviewPanel>`                                          | Fires when a view is added                                                                              |
| onDidRemoveView     | `Event<IPaneviewPanel>`                                          | Fires when a view is removed                                                                            |
| onDidDrop           | `Event<PaneviewDropEvent`                                        | Fires on an external drop event (See <Link to="/docs/api/paneview/#drag-and-drop">Drag and Drop</Link>) |
|                     |                                                                  |                                                                                                         |
| addPanel            | `addPanel(options: AddPaneviewComponentOptions): IPaneviewPanel` |                                                                                                         |
| removePanel         | `(panel: IPaneviewPanel): void`                                  |                                                                                                         |
| movePanel           | `(from: number, to: number): void`                               |                                                                                                         |
| getPanel            | `(id:string): IPaneviewPanel \| undefined`                       |                                                                                                         |
|                     |                                                                  |                                                                                                         |
| focus               | `(): void`                                                       | Focus the active panel, if exists                                                                       |
| layout              | `(width: number, height:number): void`                           | See <Link to="/docs/basics/#auto-resizing">Auto Resizing</Link>                                         |
| fromJSON            | `(data: SerializedPaneview): void`                               | <Link to="/docs/basics/#serialization">Serialization</Link>                                             |
| toJSON              | `(): SerializedPaneview`                                         | <Link to="/docs/basics/#serialization">Serialization</Link>                                             |
| clear               | `(): void`                                                       | Clears the current layout                                                                               |

## Paneview Panel API

```tsx
const MyComponent = (props: IGridviewPanelProps<{ title: string }>) => {
    // props.api...

    return <div>{`My first panel has the title: ${props.params.title}`}</div>;
};
```

| Property               | Type                                                        | Description      |
| ---------------------- | ----------------------------------------------------------- | ---------------- |
| id                     | `string`                                                    | Panel id         |
| isFocused              | `boolean`                                                   | Is panel focsed  |
| isActive               | `boolean`                                                   | Is panel active  |
| isVisible              | `boolean`                                                   | Is panel visible |
| width                  | `number`                                                    | Panel width      |
| height                 | `number`                                                    | Panel height     |
|                        |                                                             |
| onDidDimensionsChange  | `Event<PanelDimensionChangeEvent>`                          |                  |
| onDidFocusChange       | `Event<FocusEvent>`                                         |                  |
| onDidVisibilityChange  | `Event<VisibilityEvent>`                                    |                  |
| onDidActiveChange      | `Event<ActiveEvent>`                                        |                  |
| onDidConstraintsChange | `onDidConstraintsChange: Event<PanelConstraintChangeEvent>` |                  |
|                        |                                                             |
| setVisible             | `(isVisible: boolean): void`                                |                  |
| setActive              | `(): void`                                                  |                  |
| setConstraints         | `(value: PanelConstraintChangeEvent2): void;`               |                  |
| setSize                | `(event: SizeEvent): void`                                  |                  |

## Advanced Features

### Custom Header

You can provide a custom component to render an alternative header.

<div
    style={{
        height: '400px',
        backgroundColor: 'rgb(30,30,30)',
        color: 'white',
        margin: '20px 0px',
    }}
>
    <CustomHeaderPaneview />
</div>

You can provide a `headerComponent` option when creating a panel to tell the library to use a custom header component.

```tsx
const onReady = (event: PaneviewReadyEvent) => {
    event.api.addPanel({
        id: 'panel_1',
        component: 'default',
        headerComponent: 'myHeaderComponent',
        params: {
            valueA: 'A',
        },
        title: 'Panel 1',
    });
};
```

This header must be defined in the collection of components provided to the `headerComponents` props for `ReactPaneivew`

```tsx
import { IPaneviewPanelProps } from 'dockview';

const MyHeaderComponent = (props: IPaneviewPanelProps<{ title: string }>) => {
    const [expanded, setExpanded] = React.useState<boolean>(
        props.api.isExpanded
    );

    React.useEffect(() => {
        const disposable = props.api.onDidExpansionChange((event) => {
            setExpanded(event.isExpanded);
        });

        return () => {
            disposable.dispose();
        };
    }, []);

    const onClick = () => {
        props.api.setExpanded(!expanded);
    };

    return (
        <div
            style={{
                padding: '10px',
                height: '100%',
                backgroundColor: 'rgb(60,60,60)',
            }}
        >
            <a
                onClick={onClick}
                className={expanded ? 'expanded' : 'collapsed'}
            />
            <span>{props.params.title}</span>
        </div>
    );
};

const headerComponents = { myHeaderComponent: MyHeaderComponent };
```

### Drag And Drop

If you provide the `PaneviewReact` component with the prop `onDidDrop` you will be able to interact with custom drop events.

<DragAndDropPaneview />
